[tool.poetry]
name = "ghtests"
version = "0.0.1"
description = "Python test"
authors = ["test"]

license = "Apache-2.0"
readme = "README.rst"
repository = "https://google.de"
documentation = "https://google.de"
keywords=[ "test", ]
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
decorator = "^5.1.1"
isort = "^5.12.0"
pylint = "^2.17.5"
prospector = {extras = ["with-pyroma"], version = "^1.10.2"}
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
yapf = "^0.40.1"
testfixtures = "^7.1.0"
twine = "^5.1.0"
black = "^23.7.0"
poetry-bumpversion = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."matchms/__version__.py"]

[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
known_first_party = "matchms"
skip = "readthedocs/conf.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration-tests",
]

[build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
all_files = 1
builder = "html"
